--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "intro"
   ],
   "author": "fer@ironhack.com",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "mocca": "^1.0.3",
+    "mocha": "^8.2.1"
+  }
 }
